chore: set to-do list items to add from the top of the screen and fixed to-do list items vertical overflow bug preventing visibility of all to-do list items when too many added

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,10 @@ h1 {
 #to-do-group-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     row-gap: 20px;
 }
+
 .deleteIcon:hover {
     color: red;
 }
@@ -38,7 +39,7 @@ h1 {
     padding: 17px;
     border-radius: 25px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
-   
+
 }
 
 #deleteAllToDosButton:hover {
@@ -58,11 +59,8 @@ h1 {
 
 
 #footer {
-    width: 100%;
-    height: 100px;
-    position: sticky;
-    bottom: 0;
-
+    padding-bottom: 15px;
+    padding-right: 15px;
 }
 
 #sortingByCompletionButton {
@@ -70,7 +68,7 @@ h1 {
     justify-content: center;
     flex-direction: row;
     background-color: white;
-    width:90vw;
+    width: 90vw;
     height: 60px;
     border-radius: 30px;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3)
